Make website header less annoying

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2> I want to use Generative AI, and Deep Learning to make better games, faster. </h2>
+							<h2> I've got the best job in the world </h2>
 						</header>
 						<p>
 							I set out to be a physics researcher, I started writing machine learning algorithms in a condensed matter physics lab, but it was my love of video games 
